--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-DB_USERNAME = hardimajmundar0906
-DB_PASSWORD = Hardi
-DB_DATABASE = humberdb
-DB_CLUSTER =  @cluster0.odsmusw.mongodb.net
+# DB_USERNAME = hardimajmundar0906
+# DB_PASSWORD = Hardi
+# DB_DATABASE = humberdb
+# DB_CLUSTER =  @cluster0.odsmusw.mongodb.net
 
+
+DB_USERNAME = heli
+DB_PASSWORD = helikheni
+DB_DATABASE = humberdb
+DB_CLUSTER = @cluster0.rwajj2z.mongodb.net
